# Rust-To-C-test

./: Cargo.toml  build_rust_clib.ps1
C/: CMakeLists.txt  Test.exe.stackdump  main.c  main.s  parse_json.d  parse_json.dll.exp
C/lib/: parse_json.d  parse_json.dll.exp  parse_json.dll.lib  parse_json.h
src/: lib.rs
