[package]
name = "rust_to_c"
version = "0.1.0"
authors = ["erik"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "parse_json"
crate-type = ["staticlib"]

[dependencies]
serde = { version="1.0.136", features = ["derive"] }
serde_json = "*"
libc = "*"
safer-ffi = "*"